...
    <View style={styles.container}>
      <View style={[styles.gradient, { backgroundColor: Colors.GlobalDarkBackground }]}>
        <SafeAreaView style={styles.safeArea}>
          <View style={styles.contentContainer}>
            <View style={styles.titleContainer}>
              <ThemedText type="title" style={styles.title}>
                {`Your recovery phrase`}
              </ThemedText>
              <ThemedText style={styles.subtitle}>Make sure to write it down as shown here.{'\n'}You have to verify this later.</ThemedText>
            </View>

            {error ? (
              <View style={styles.errorContainer}>
...
              />
            )}

            <View style={styles.bottomButtonContainer}>
              {!error && recoveryPhrase && (
                <Animated.View style={verifyButtonAnimation}>
                  <Pressable style={styles.skipButton} onPress={handleContinue} testID="SkipButton">
                    <ThemedText style={styles.buttonText}>Skip</ThemedText>
                  </Pressable>
                </Animated.View>
              )}

              {!error && recoveryPhrase && (
...
